// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LicenseWarningCallout community license is valid 1`] = `<EuiErrorBoundary />`;

exports[`LicenseWarningCallout license cannot be loaded 1`] = `
<EuiErrorBoundary>
  <React.Fragment>
    <EuiCallOut
      color="danger"
      data-test-subj="sg.callout.licenseWarning"
      iconType="alert"
      id="sg.label.licensewarning"
      title="Error"
    >
      <EuiText>
        <p>
          <EuiI18n
            default="The Search Guard license information could not be loaded. Please contact your system administrator."
            token="sg.license_error.licenseCantBeLoaded.text"
          />
        </p>
      </EuiText>
    </EuiCallOut>
    <EuiSpacer />
  </React.Fragment>
</EuiErrorBoundary>
`;

exports[`LicenseWarningCallout license is expired 1`] = `
<EuiErrorBoundary>
  <React.Fragment>
    <EuiCallOut
      color="danger"
      data-test-subj="sg.callout.licenseWarning"
      iconType="alert"
      id="sg.label.licensewarning"
      title="Error"
    >
      <EuiText>
        <p>
          <React.Fragment>
            <EuiI18n
              default="The Search Guard license key is not valid for this cluster. Please contact your system administrator."
              token="sg.license_error.licenseKeyIsInvalid.text"
            />
             
            <EuiLink
              href="https://search-guard.com/licensing/"
              target="_blank"
            >
              Licensing options.
            </EuiLink>
          </React.Fragment>
        </p>
      </EuiText>
      <EuiListGroup>
        <EuiListGroupItem
          label="License is expired"
        />
      </EuiListGroup>
    </EuiCallOut>
    <EuiSpacer />
  </React.Fragment>
</EuiErrorBoundary>
`;

exports[`LicenseWarningCallout license is not required 1`] = `<EuiErrorBoundary />`;

exports[`LicenseWarningCallout license is required 1`] = `
<EuiErrorBoundary>
  <React.Fragment>
    <EuiCallOut
      color="danger"
      data-test-subj="sg.callout.licenseWarning"
      iconType="alert"
      id="sg.label.licensewarning"
      title="Error"
    >
      <EuiText>
        <p>
          <React.Fragment>
            <EuiI18n
              default="The Search Guard license key is not valid for this cluster. Please contact your system administrator."
              token="sg.license_error.licenseKeyIsInvalid.text"
            />
             
            <EuiLink
              href="https://search-guard.com/licensing/"
              target="_blank"
            >
              Licensing options.
            </EuiLink>
          </React.Fragment>
        </p>
      </EuiText>
    </EuiCallOut>
    <EuiSpacer />
  </React.Fragment>
</EuiErrorBoundary>
`;

exports[`LicenseWarningCallout license is valid but expires in 20 days 1`] = `
<EuiErrorBoundary>
  <React.Fragment>
    <EuiCallOut
      color="warning"
      data-test-subj="sg.callout.licenseHint"
      iconType="help"
      id="sg.label.licensehint"
      title="Warning"
    >
      <EuiText>
        <p>
          <EuiI18n
            default="Your license expires in 20 days."
            token="sg.license_warning.licenseExpiresIn.text"
          />
        </p>
      </EuiText>
    </EuiCallOut>
    <EuiSpacer />
  </React.Fragment>
</EuiErrorBoundary>
`;

exports[`LicenseWarningCallout trial license is valid but expires in 10 days 1`] = `
<EuiErrorBoundary>
  <React.Fragment>
    <EuiCallOut
      color="warning"
      data-test-subj="sg.callout.licenseHint"
      iconType="help"
      id="sg.label.licensehint"
      title="Warning"
    >
      <EuiText>
        <p>
          <EuiI18n
            default="Your trial license expires in 10 days."
            token="sg.license_warning.trialLicenseExpiresIn.text"
          />
        </p>
      </EuiText>
    </EuiCallOut>
    <EuiSpacer />
  </React.Fragment>
</EuiErrorBoundary>
`;
